--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -79,7 +79,7 @@
 			"url" : url,
 			"data" : data,
 			"success" : function(res) {
-
+				console.log();
 				res1 = {
 					"data" : [ {
 						"DeptID" : "1351",
