--- a/html/neiqingform.html
+++ b/html/neiqingform.html
@@ -28,7 +28,6 @@
 
 <script>
 	var jsonData = new Object();
-	var s = "/genertec";
 	$(document).ready(
 			function() {
 				$.hori.showLoading();
@@ -51,7 +50,10 @@
 
 						var list = JSON.parse(res);
 
-						list.content[1] = list.content[1].replace("&nbsp;", "")
+						$(".content").html(list.content);
+
+						$("#agyjDiv").html(list.agyj);
+
 						if (null != list.lianjie) {
 							for ( var i = 0; i < list.lianjie.length; i++) {
 								var j = list.fileName[i].split(".");
@@ -70,12 +72,6 @@
 							console.log(jsonData);
 							renderDetail2();
 						}
-						jsonData.json = list;
-
-						renderDetail();
-						list.agyj.replace("?", " ")
-						console.log(list.agyj);
-						$("#yjTable").html(list.agyj.replace(s, " "));
 
 					},
 					"error" : function(res) {
@@ -108,93 +104,34 @@
 	}
 </script>
 <style type="text/css">
-.arrow {
+.yjTable {
+	width: 90%;
 	float: center;
-	width: 85%;
 }
 </style>
 
 </head>
 <body>
-	<div id="daiban">
-		<div align="center">
-			<h2>会签处理单</h2>
-		</div>
-		<div align="center">
-
-			<TABLE class=hqTable id="table1" style="width: 85%" id="table1">
-				<TBODY>
-					<TR bgColor=#e0e0e0>
-						<TD class=hqLabel width="10%">标&nbsp;&nbsp;&nbsp;题</TD>
-						<TD class=hqContent width="90%" colspan="3"><span
-							data-bind="text:$root.json.content()[0]"></span></TD>
-
-					</TR>
-
-					<TR bgcolor="#f0f0f0">
-						<TD class=hqLabel width="10%">收文日期</TD>
-						<TD class=hqContent width="40%"><span
-							data-bind="text:$root.json.content()[1]"></span></TD>
-						<TD class=hqLabel width="10%">收文来源</TD>
-						<TD class=hqContent width="40%"><span
-							data-bind="text:$root.json.content()[2]"></span></TD>
-
-					</TR>
-
-					<TR bgColor=#e0e0e0>
-						<TD class=hqLabel width="10%">来文单位</TD>
-						<TD class=hqContent width="40%"><span
-							data-bind="text:$root.json.content()[3]"></span></TD>
-						<TD class=hqLabel width="10%">来问字号</TD>
-						<TD class=hqContent width="40%"><span
-							data-bind="text:$root.json.content()[4]"></span></TD>
-
-					</TR>
-
-				</TBODY>
+	<div class="content"></div>
+	 
+	<div align="center" style="margin-top: 20px;">
+		<div style="width: 100%;">
+            <table   style="width: 90%">
+              <tr><td><span><font face="宋体" size="4"><b>正文附件：</b></font></span></td>
+              </tr>
+            </table>
+			<TABLE class="fjTable" style="width: 90%" class="fj" id="table2"
+				style="width: 100%"data-bind="foreach: file">
+				
+				<TR >
+					<TD bgcolor="#f0f0f0" width="100%"><a
+						data-bind="click:viewfile"><span data-bind="text: fileName"></span></a></TD>
+				</TR>
 			</TABLE>
-
-		</div>
-		<div align="center" style="margin-top: 20px;">
-			<div style="width: 100%;">
-				<table style="width: 85%">
-					<tr>
-						<td><span><font face="宋体" size="4"><b>正文附件：</b></font></span>
-						</td>
-					</tr>
-				</table>
-				<TABLE class="fjTable" style="width: 85%" class="fj" id="table2"
-					data-bind="foreach: file">
-
-					<TR>
-						<TD bgcolor="#f0f0f0" width="100%"><a
-							data-bind="click:viewfile"><span data-bind="text: fileName"></span></a></TD>
-					</TR>
-				</TABLE>
-			</div>
-
-
 		</div>
 
-		<div class="yjdiv" align="center" style="margin-top: 20px;">
-
-			<table style="width: 85%">
-				<tr>
-					<td>审批意见：</td>
-				</tr>
-				<tr style="width: 100%;">
-					<td style="width: 100%;"><table id="yjTable"
-							style="width: 100%;">
-					
-						</table></td>
-				</tr>
-			</table>
-
-
-		</div>
 
 	</div>
-
-
+	<div id="agyjDiv" align="center"></div>
 </body>
 </html>
