* 调整报表不显示动画

--- a/html/bi/srbk.html
+++ b/html/bi/srbk.html
@@ -85,7 +85,7 @@ a {
 	function loadlrbk(title,year,month,primaryunit,category,seriesdata,fontSize) {
 	var option = 
 	        {
-	            
+			    animation:false,
 	            tooltip : {
 	                trigger: 'item',
 	                formatter: "{a} <br/>{b} : {c} ({d}%)"
