--- a/html/bi/srlr.html
+++ b/html/bi/srlr.html
@@ -104,6 +104,7 @@ a {
 		function loadSrlrqs(title, seriesname, seriesdata, category,
 				serieschart, year, month) {
 			var option = {
+				animation:false,
 				tooltip : {
 					trigger : 'axis'
 				},
