--- a/html/bi/srlrqs.html
+++ b/html/bi/srlrqs.html
@@ -101,6 +101,7 @@ ss.style.width=w+"px";
 	<script type="text/javascript">
 		function loadSrlrqs(month,seriesname,lastSumData,nowSumData,increaseData,yearBudget) {
 			var option = {
+				animation:false,
 				tooltip : {
 					trigger : 'axis'
 				},
