--- a/html/bi/lrwc.html
+++ b/html/bi/lrwc.html
@@ -88,6 +88,7 @@ a {
     }
 	function draw(ljwcz,lrwc){
 		var option = {
+				animation:false,
 				toolbox : {
 					show : false,
 					feature : {
