+ 添加缺失标题页面 * 调整新闻列表显示loading状态

--- a/html/bi/jyts.html
+++ b/html/bi/jyts.html
@@ -23,7 +23,7 @@ a {
 <script type="text/javascript">
 
 	$(document).ready(function(){
-		$.hori.setHeaderTitle("经营动态");
+		$.hori.setHeaderTitle("经营态势");
 		//加载收入完成图表数据
 		loadSrwcChart();
 	});
