--- a/html/bi.html
+++ b/html/bi.html
@@ -12,7 +12,6 @@
 <script src="../lib/json/json2.js"></script>
 <script src="../lib/hori/hori.js?tag=21369"></script>
 <script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
-<script src="../lib/app/home/app.js"></script>
 <script src="../config/web/config.js"></script>
 
 <link rel="stylesheet" href="../lib/app/home/css/news.css">
@@ -22,7 +21,7 @@
 <script type="text/javascript">
 	var currentUser = "";
 	$(document).ready(function() {
-		$.hori.setHeaderTitle("BI图表");
+		$.hori.setHeaderTitle("经营数据");
 		var allData = [ {
 			'reportId' : 1,
 			'title' : '经营态势',
