--- a/html/bi/lrwc.html
+++ b/html/bi/lrwc.html
@@ -78,7 +78,7 @@ a {
                 	var d=seriesname[2]+":"+seriesdata[2]+"%";
                 	document.getElementById("bili").innerHTML=d;
                 	var ww=(Math.ceil((seriesdata[0])/10))*10;
-                	draw(ww,lrwc);
+                	draw(ww,lrwc,0.6,0.7);
                 },
                 "error":function(res){
                     alert("error:" + res);
@@ -86,7 +86,7 @@ a {
                 }
             });
     }
-	function draw(ljwcz,lrwc){
+	function draw(ljwcz,lrwc,colorOne,colorTwo){
 		var option = {
 				animation:false,
 				toolbox : {
@@ -113,17 +113,18 @@ a {
 					max: ljwcz,   
 					axisLine : { // 坐标轴线
 						lineStyle : { // 属性lineStyle控制线条样式
-							color : [ [ 0.2, '#01a149' ], [ 0.8, '#01a149' ],
-									[ 1, '#01a149' ] ],
-							width : 50
+							color : [ [ colorOne, '#FFD700' ], [ colorTwo, '#7CFC00' ],
+	                                    [ 1, '#A066D3' ] ],
+	                            width : 50
 						}
 					},
 					axisTick : { // 坐标轴小标记
 						splitNumber : 10, // 每份split细分多少段
-						length : 10, // 属性length控制线长
-						lineStyle : { // 属性lineStyle控制线条样式
-							color : '#1ad4d1'
-						}
+                        length : 4, // 属性length控制线长
+                        lineStyle : { // 属性lineStyle控制线条样式
+                            color : '#F5F5F5'
+                                //color : '#292421'
+                        }
 					},
 					axisLabel : { // 坐标轴文本标签，详见axis.axisLabel
 						textStyle : { // 其余属性默认使用全局文本样式，详见TEXTSTYLE
