--- a/html/home2.html
+++ b/html/home2.html
@@ -45,35 +45,42 @@
 	//请示待办
 	function loadTaskList() {
 		$.hori.showLoading();
-		$.hori.loadPage($.hori.getconfig().serverBaseUrl + "viewhome/html/task.html");
+		$.hori.loadPage($.hori.getconfig().serverBaseUrl
+				+ "viewhome/html/task.html");
 	}
 	//请示查阅
 	function loadqueryList() {
 		localStorage.setItem("click", "1");
 		localStorage.setItem("addmore", "no");
 		$.hori.showLoading();
-		$.hori.loadPage($.hori.getconfig().serverBaseUrl + 'viewhome/html/queryList.html');
+		$.hori.loadPage($.hori.getconfig().serverBaseUrl
+				+ 'viewhome/html/queryList.html');
 	}
 	//加载新闻列表
 	function loadNewsList(typeName) {
 		localStorage.setItem("moreCurrentName", typeName);
 		$.hori.showLoading();
-		$.hori.loadPage($.hori.getconfig().serverBaseUrl + 'viewhome/html/news/newsList.html');
+		$.hori.loadPage($.hori.getconfig().serverBaseUrl
+				+ 'viewhome/html/news/newsList.html');
 	}
 	//BI
 	function loadBI() {
 		$.hori.showLoading();
-		$.hori.loadPage($.hori.getconfig().serverBaseUrl + 'viewhome/html/bi.html');
+		$.hori.loadPage($.hori.getconfig().serverBaseUrl
+				+ 'viewhome/html/bi.html');
 	}
 	var cookie_userstore;
 	function createUser() {
 		$.hori.getCookies(function(clientCookie) {
 			try {
 				var key = "data-userstore";
-				cookie_userstore = new RegExp(encodeURIComponent(key) + '=([^;]*)').exec(clientCookie);
+				cookie_userstore = new RegExp(encodeURIComponent(key)
+						+ '=([^;]*)').exec(clientCookie);
 				if (cookie_userstore) {
-					localStorage.setItem("cookie_userstore", cookie_userstore[1]);
-					var serverDomain = new RegExp('^https?://(.*?)(?=:|/)').exec($.hori.getconfig().appServerHost);
+					localStorage.setItem("cookie_userstore",
+							cookie_userstore[1]);
+					var serverDomain = new RegExp('^https?://(.*?)(?=:|/)')
+							.exec($.hori.getconfig().appServerHost);
 					if (serverDomain) {
 						$.cookie('data-userstore', cookie_userstore[1], {
 							expires : 7,
@@ -93,20 +100,21 @@
 			}
 		});
 
-		$.hori.ajax({
-			"type" : "get",
-			"url" : $.hori.getconfig().appServerHost
-					+ "/view/oa/currentuser/doctest/genertec/persontasks.nsf/frmPage?openform",
-			"success" : function(res) {
-				localStorage.setItem("Chinesename", res);
-				currentUser = "CN=" + res + "/O=genertec";
-				localStorage.setItem("itcodetasklist", currentUser);
-				$.hori.hideLoading();
-			},
-			"error" : function(res) {
-				alert("获取当前登陆人失败");
-			}
-		});
+		$.hori
+				.ajax({
+					"type" : "get",
+					"url" : $.hori.getconfig().appServerHost
+							+ "/view/oa/currentuser/doctest/genertec/persontasks.nsf/frmPage?openform",
+					"success" : function(res) {
+						localStorage.setItem("Chinesename", res);
+						currentUser = "CN=" + res + "/O=genertec";
+						localStorage.setItem("itcodetasklist", currentUser);
+						$.hori.hideLoading();
+					},
+					"error" : function(res) {
+						alert("获取当前登陆人失败");
+					}
+				});
 	}
 	//获取图标个数
 	function getTuBiao() {
@@ -149,12 +157,12 @@
 			"id" : 8,
 			"name" : "聘免公告",
 			"img" : "../assets/home/doc.png",
-			"target" : ""
+			"target" : "loadPmgg()"
 		}, {
 			"id" : 9,
 			"name" : "科技动态",
 			"img" : "../assets/home/kgxw.gif",
-			"target" : ""
+			"target" : "loadKjdt()"
 		}, {
 			"id" : 10,
 			"name" : "政策法规资讯",
@@ -174,17 +182,37 @@
 	//安全生产值班表列表
 	function loadAqsczbb() {
 		$.hori.showLoading();
-		$.hori.loadPage($.hori.getconfig().serverBaseUrl + 'viewhome/html/watchlist.html');
+		$.hori.loadPage($.hori.getconfig().serverBaseUrl
+				+ 'viewhome/html/watchlist.html');
 	}
+	
+	//聘免公告
+	function loadPmgg(typeName) {
+	typeName = "GT_HomePage_SiteArea_pmgg";
+	localStorage.setItem("moreCurrentName", typeName);
+	$.hori.showLoading();
+	$.hori.loadPage($.hori.getconfig().serverBaseUrl + 'viewhome/html/news/newsList.html');
+}
+	
+	//科技动态
+	function loadKjdt(typeName) {
+	typeName = "GT_HomePage_SiteArea_kjdt";
+	localStorage.setItem("moreCurrentName", typeName);
+	$.hori.showLoading();
+	$.hori.loadPage($.hori.getconfig().serverBaseUrl + 'viewhome/html/news/newsList.html');
+}
+	
 	//加载图片新闻子页面
 	function loadJtxw() {
 		$.hori.showLoading();
-		$.hori.loadPage($.hori.getconfig().serverBaseUrl + 'viewhome/html/jtxwz.html');
+		$.hori.loadPage($.hori.getconfig().serverBaseUrl
+				+ 'viewhome/html/jtxwz.html');
 	}
 	//加载政策法规资讯子页面
 	function loadZcfg() {
 		$.hori.showLoading();
-		$.hori.loadPage($.hori.getconfig().serverBaseUrl + 'viewhome/html/zcfgz.html');
+		$.hori.loadPage($.hori.getconfig().serverBaseUrl
+				+ 'viewhome/html/zcfgz.html');
 
 	}
 	function render(data) {
@@ -194,12 +222,11 @@
 	}
 </script>
 <style>
-
 .divxs {
-		width: 33.333%;
-		margin-top: 20px
-	}
-  /*  @media  only screen and (min-width: 1070px) and (max-width: 1081px) {
+	width: 33.333%;
+	margin-top: 20px
+}
+/*  @media  only screen and (min-width: 1070px) and (max-width: 1081px) {
   .imgToDo {
     width:10em;
   }
