--- a/html/guide.html
+++ b/html/guide.html
@@ -22,7 +22,7 @@
 			try{
 				hori.setHeaderTitle("首次登录向导");
 				/*隐藏后退按钮*/
-				hori.hideBackBtn();
+				//hori.hideBackBtn();
 			}catch(e){
 				alert(e.message);
 			}
