--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -65,9 +65,14 @@
 			var skey = $("#searchKey").val();
 			skey = encodeURI(skey);
 			var random = new Date().getTime();
+			var cookie_userstore = localStorage.getItem("cookie_userstore");
 			var url = $.hori.getconfig().appServerHost
 					+ "view/safety/watchList/Application/Safety/SafetyProBasic.nsf/SearchHolidayDutyForMobile?open";
-			url = url + "&data-random=" + random + "&data-result=text"
+			url = url + "&data-random=" + random + "&data-result=text&data-userstore=" + cookie_userstore; 
+			//var url = $.hori.getconfig().appServerHost
+			//		+ "view/safety/watchList/Application/Safety/SafetyProBasic.nsf/HolidayDutyView?readviewentries?login&start=1&count=19"
+			//url = url + "&data-random=" + random + "&data-result=text&data-userstore=" + cookie_userstore;
+			alert(url);
 		} catch (e) {
 		}
 		var data = 'key=' + skey;
@@ -77,7 +82,7 @@
 			"url" : url,
 			"data" : data,
 			"success" : function(res) {
-				console.log(res);
+				//alert(res);
 				res1 = {
 					"data" : [ {
 						"DeptID" : "1351",
