修复guide页左侧文字折行问题

--- a/html/guide.html
+++ b/html/guide.html
@@ -66,12 +66,12 @@
 <body>
 	<!-- 登录页面 -->
 	<div data-role="page" id="login" class="login">
-		<div data-role="content" align="center">
+		<div data-role="content" align="center" style="padding:0.5em">
 			<ul id="viewBody" data-role="listview" data-theme="c" data-inset="true" style="max-width:400px;" >
 				<li data-role="list-divider" ><a href="javascript:void(0);" data-theme="f" ></a></li>
 				<li data-role="fieldcontain" data-type="horizontal" >
 					<table style="width:100%" cellspaceing="0" cellpadding="0" border="0">
-						<tr><td>
+						<tr><td style="min-width:5em">
 						<strong>姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名:</strong>
 						</td><td>
 						<input type="text" name="username" style="outline:none;width:100%;border:0;background:transparent;" id="username" value="" onfocus ="clearData()" onblur="showTips()"/>
@@ -80,7 +80,7 @@
 				</li>
 				<li data-role="fieldcontain">
 					<table style="width:100%" cellspaceing="0" cellpadding="0" border="0">
-						<tr><td>
+						<tr><td style="min-width:5em">
 						<strong>身份证号:</strong>
 						</td><td>
 						<input type="text" name="number" style="outline:none;width:100%;border:0;background:transparent;" id="number" value=""/>
@@ -109,7 +109,7 @@
 				<li data-role="list-divider" ><a href="javascript:void(0);" data-theme="f" ></a></li>
 				<li data-role="fieldcontain" data-type="horizontal" >
 					<table style="width:100%" cellspaceing="0" cellpadding="0" border="0">
-						<tr><td>
+						<tr><td style="min-width:5em">
 						<strong>手机号码:</strong>
 						</td><td>
 						<input type="text" name="phoneNumber" style="outline:none;width:100%;border:0;background:transparent;" id="phoneNumber" value=""/>
