--- a/html/guide.html
+++ b/html/guide.html
@@ -15,6 +15,7 @@
 	<script src="../config/web/config.js"></script>
 	<style>
 		a{text-decoration:none;}
+		div p{margin:4px 15px}
 	</style>
 	<script type="text/javascript">
 		$(document).ready(function(){
@@ -88,23 +89,13 @@
 					</table>
 				</li>
 		</ul>
-			<div class="ui-grid-d">
-				<div class="ui-block-a">
-				</div>
-				<div class="ui-block-b">
-				</div>
-				<div class="ui-block-c" style="width: 200px;">
+			<div class="ui-grid-a" style="max-width:400px;">
 					<a href="javascript:void(0)"  onclick="seach()" data-theme="f" data-role="button" data-icon="false">查&nbsp;询</a>
 				</div>
-				<div class="ui-block-d">
-				</div>
-				<div class="ui-block-e">
-				</div>
+			<div  style="max-width:400px;text-align:left;" >
+				<p>您的集团统一用户账号是：ＡＡＢＢＦＤＫＦ，请使用对应的密码登陆，如无法登陆，请点击<a>忘记密码</a>重置</p>
+				<p>您当前的手机号为：189****8846</p><p>如需更改手机号，请与本单位人力资源部联系</p>
 			</div>
-			<ul data-role="listview" data-theme="c" data-inset="true" style="max-width:400px;text-align:left;" >
-				<p>您的集团统一用户账号是：ＡＡＢＢＦＤＫＦ，请使用对应的密码登陆，<br/>如无法登陆，请点击<a>忘记密码</a>重置</p><br/>
-				<p>您当前的手机号为：189****8846</p><br/><p>如需更改手机号，请与本单位人力资源部联系</p>
-			</ul>
 			<ul data-role="listview" data-theme="c" data-inset="true" style="max-width:400px;" >
 				<li data-role="list-divider" ><a href="javascript:void(0);" data-theme="f" ></a></li>
 				<li data-role="fieldcontain" data-type="horizontal" >
